kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-api
  labels:
    app: hello-api

spec:
  replicas: 2

  selector:
    matchLabels:
      app: hello-api

  template:
    metadata:
      labels:
        app: hello-api

    spec:
      containers:
      - name: hello-api

        image: 414772274275.dkr.ecr.ap-south-1.amazonaws.com/hello-api-dev-hello-api:64c9257a9b29dd108f023def8bcdd119043dc225

        imagePullPolicy: Always

        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: 200m
            memory: 128Mi

          limits:
            cpu: 500m
            memory: 256Mi

        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 15
