kustomize/base/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: hello-api

spec:

  selector:
    app: hello-api

  ports:

  - port: 80

    targetPort: 8080

  type: ClusterIP
