kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trivto-ingress
spec:
  rules:
    - host: trivto.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trivto-service
                port:
                  number: 80
